<resources>
    <string name="app_name">MS_Diagnostic</string>
    <string name="tap_button">Tap</string>
    <string name="tap_test_text">Tap Test</string>
    <string name="spiral_test_text">Spiral Test</string>
    <string name="tap_count">Start Tapping!</string>
    <string name="tap_instructions">Start Tapping in: %d</string>
    <string name="tap_hand">Please use: </string>
    <string name="tap_start_tapping">START TAPPING</string>
    <string name="Main_message">This is a Multiple Sclerosis Test. When ready, Start the Test.</string>
    <string name="tap_activity_done">Done!</string>
    <string name="timer_text">Timer:</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="LEFT">LEFT</string>
    <string name="RIGHT">RIGHT</string>
    <string name="next_hand">Next Hand</string>
    <string name="balancer_text_score">Score:</string>
    <string name="hand">Hand:</string>
    <string name="balance">Balance</string>
    <string name="tap_instr_text">This is the tapping test\nThe tapping test will be a sequence of 3 test per hand\n\nSelect a hand to start:</string>
    <string name="left_hand_button">Left\nHand</string>
    <string name="right_hand_button">Right\nHand</string>

    <string name="balloon_counter">Counter: %1$d</string>
</resources>
