<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmsc436.ms_diagnostic.MainActivity"
    >


    <Button
        android:text="@string/tap_test_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_tap_activity"
        android:onClick="toTapActivity"
        android:background="@color/colorAccent"
        />

    <TextView
        android:text="@string/Main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_tap_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:id="@+id/Main_message"
        android:textSize="30sp" />

    <Button
        android:text="@string/spiral_test_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:id="@+id/button_spiral_activity"
        android:layout_below="@+id/button_tap_activity"
        android:layout_alignStart="@+id/button_tap_activity"
        android:layout_marginTop="12dp"
        android:onClick="startSpiralTest"
        />

    <Button
        android:text="@string/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:id="@+id/button_balance_activity"
        android:layout_below="@+id/button_spiral_activity"
        android:layout_alignStart="@+id/button_tap_activity"
        android:layout_marginTop="12dp"
        android:onClick="startBalancer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bubble Test"
        android:background="@color/colorAccent"
        android:id="@+id/button_bubble_activity"
        android:layout_below="@+id/button_balance_activity"
        android:layout_alignStart="@+id/button_tap_activity"
        android:layout_marginTop="12dp"
        android:onClick="startBubble"/>

</RelativeLayout>
