<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tap_instruction_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmsc436.ms_diagnostic.tap_check_test.TappingInstr">

    <TextView
        android:textSize="20dp"
        android:gravity="left"
        android:text="@string/tap_instr_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_text_msg"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <Button
        android:text="Done!"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/done_tap_button"
        android:onClick="showResults"/>


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/display_text_msg"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/done_tap_button">

        <Button
            android:text="@string/left_hand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_hand_button"
            android:onClick="startLeftTest" />

        <Button
            android:text="@string/right_hand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_hand_button"
            android:onClick="startRightTest"/>

    </LinearLayout>


</RelativeLayout>
